syntax = "proto3";
package p2p;
option go_package = "/models";

message Block{
    string PVHash = 1;
    int64 Timestamp = 2;
    string Data = 3;
    int64 Index = 4;
    int64 Nonce = 5;
    string Hash = 6;
}

message Trans{
    string Account=1;
    string Cipher=2;
    string Transaction=3;
}

message BlockChain{
    repeated Block Chain = 1;
}

message TailBlockRequest{}

message UpdateBlockChainResponse{}

message NewTransactionResponse{}

message NewBlockResponse{
    bool ChainNeedUpdate = 1;
}

message Peer{
    string IP = 1;
    int32 Port = 2;
}

message PeerList{
    repeated Peer Peers = 1;
}

message TransPool{
    repeated Trans TransPool = 1;
}


service P2P{
    rpc RequestTailBlock(TailBlockRequest) returns(Block){}
    rpc UpdateBlockChain(BlockChain) returns(UpdateBlockChainResponse){}
    rpc NewBlock(Block) returns (NewBlockResponse){}
    rpc NewTransaction(Trans) returns(NewTransactionResponse){}
    rpc NewPeer(Peer) returns(PeerList){}
}
